assets/main.css
:root {
  --c-bg: #ffffff;
  --c-scroll: #d9d9d9;
  --c-scroll-hover: #bbbbbb;
  scrollbar-color: var(--c-scrollbar) var(--c-bg);
}

@media (prefers-color-scheme: dark) {
  :root {
    --c-bg: #111827;
    --c-scroll: #333333;
    --c-scroll-hover: #555555;
    color-scheme: dark;
  }
}

html {
  background-color: var(--c-bg);
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

.font-monash {
  font-family: 'Roboto', sans-serif;
}

.keyword-box {
  border: 1px solid #4b5563;
  padding: 0.25rem 0.5rem;
  border-radius: 0.375rem;
  margin: 0 0.25rem;
}

  .title {
  font-family: 'Hubot Sans', sans-serif;
}

.highlight {
  position: relative;
  display: inline-block;
}

.highlight::after {
  content: '';
  position: absolute;
  left: -0.2em;
  right: -0.2em;
  bottom: 0.1em;
  height: 0.4em;
  background-color: #60a5fa;
  z-index: -1;
  transform: scaleX(0);
  transform-origin: left;
  animation: highlight 1s 0.5s forwards;
}

@keyframes highlight {
  to {
    transform: scaleX(1);
  }
}

::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}
::-webkit-scrollbar-thumb {
  background-color: var(--c-scroll);
  border-radius: 4px;
}
::-webkit-scrollbar-thumb:hover {
  background-color: var(--c-scroll-hover);
}
::-webkit-scrollbar-track {
  background-color: var(--c-bg);
}

